tests/baselines/reference/parserErrorRecoveryIfStatement4.errors.txt
==== tests/cases/compiler/parserErrorRecoveryIfStatement4.ts (2 errors) ====
    class Foo {
      f1() {
        if (a.b)
            ~
!!! parserErrorRecoveryIfStatement4.ts(3,9): error TS2095: Cannot find name 'a'.
      }
      ~
!!! parserErrorRecoveryIfStatement4.ts(4,3): error TS1005: 'expression' expected.
      f2() {
      }
      f3() {
      }
    }